--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ web_modules/
 .env.local
 
 
-.firebase-service-account.json
+firebase-service-account.json
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
