--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node index.js",
+		"vercel-build": "node index.js"
 	},
 	"keywords": [],
 	"author": "",
